syntax = "proto3";
package api;
import "google/api/annotations.proto";

message Inventory{
  int64 id = 1;
  string name = 2;
}

message GetInventoryParams{
  string id = 1;
  string name = 2;
}

message AddInventoryParams {
  string name = 1;
}

message DeleteInventoryParams {
  string id = 1;
}

message InventoryResponse {
  int64 id = 1;
  string name = 2;
}


message GetMTGCardParams{
  int64 inventory_id = 1;
}

message AddMTGCardParams{
  int64 inventory_id = 1;
  string name = 2;
  int32 qty = 3;
}

message DeleteMTGCardParams{
  int64 inventory_id = 1;
  string name = 2;
  int32 qty = 3;
}

message MTGCard {
  int64 inventory_id = 1;
  string name = 2;
  int32 qty = 3;
}

message MTGCardResponse {
  repeated MTGCard cards = 1;
}

message deleteResponse {
  string message = 1;
}  

service MTGCardService {
  rpc AddInventory(addInventoryParams) returns (InventoryResponse) {
    option (google.api.http) = {
      post: "/v1/inventory"
      body: "*"
    };
  }
  rpc GetInventory(getInventoryParams) returns (InventoryResponse) {
    option (google.api.http) = {
      post: "/v1/inventory"
      body: "*"
    };
  }
  rpc DeleteInventory(deleteInventoryParams) returns (InventoryResponse) {
    option (google.api.http) = {
      post: "/v1/inventory"
      body: "*"
    };
  }
  rpc AddMTGCard(addMTGCardParams) returns (MTGCardResponse) {
    option (google.api.http) = {
      post: "/v1/inventory/{inventory_id}"
      body: "*"
    };
  }
  rpc DeleteMTGCard(deleteMTGCardParams) returns (deleteResponse) {
    option (google.api.http) = {
      delete: "/v1/inventory/{inventory_id}/{name}"
    };
  }
  rpc GetMTGCard(getMTGCardParams) returns (MTGCardResponse) {
    option (google.api.http) = {
      get: "/v1/inventory/{inventory_id}"
    };
  }
}